bpo-40715: Reject dict unpacking on dict comprehensions (GH-20292)

Co-authored-by: Lysandros Nikolaou <lisandrosnik@gmail.com>
Co-authored-by: Pablo Galindo <pablogsal@gmail.com>
(cherry picked from commit b8a65ec1d3d4660d0ee38a9765d98f5cdcabdef5)

Co-authored-by: Batuhan Taskaya <isidentical@gmail.com>